tests/NormalTests/paczka1/fuzzy1/70260695.err
Error in line 9: S820 S820 26,1
Error in line 22: dgtcO4gE S752 29,2
Error in line 29: dgtcO4gE A122 98,9
